Fixing partitioned elements in admin's potential covers tab

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -365,7 +365,7 @@ form.compacted .form-group {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .special-header a {
